# ChinczykQt-Ludo

./: README.md
ChinczykQt/: CMakeLists.txt  boardscene.cpp  boardscene.h  gra.cpp  gra.h  gracz.cpp  gracz.h  kostka.cpp  kostka.h  mainwindow.cpp  mainwindow.h  pionek.cpp  pionek.h  plansza.cpp  plansza.h  tokenitem.cpp  tokenitem.h
